--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
+beautifulsoup4==4.6.3
 certifi==2018.11.29       # via requests
 chardet==3.0.4            # via requests
 click==7.0
